# analisi-dati-tesi

./: .gitignore  CMakeLists.txt  README.md  analysis.cpp  main.cpp
include/: analysis.hh  constants.hh  data.hh  graphs.hh  merge_pixels.hh  options.hh  pixel_collection.hh  reference.hh  solve_system.hh
src/: analysis.cpp  data.cpp  graphs.cpp  options.cpp  pixel_collection.cpp
trash/: merge_pixels.hh
utils/: options.txt
